# drone

./: .clang-format  .gitignore  LICENSE  README.md  main.py  meson.build  pyproject.toml
connection/: Connection.py  SocketConnection.py  config.py
logic/: drone.cpp  drone.hpp  module.cpp  position.cpp  position.hpp  vec3.cpp  vec3.hpp
try_to_fly/: PID.py  fly.py  logger.py  main.py
